# fielding

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Messages.sh  README.md  org.kde.fielding.desktop  org.kde.fielding.json  org.kde.fielding.metainfo.xml  org.kde.roy.desktop  org.kde.roy.json  org.kde.roy.metainfo.xml
.reuse/: dep5
po/ar/: fielding.po
po/ast/: fielding.po
po/ca/: fielding.po
po/ca@valencia/: fielding.po
po/cs/: fielding.po
po/de/: fielding.po
po/en_GB/: fielding.po
po/eo/: fielding.po
po/es/: fielding.po
po/eu/: fielding.po
po/fr/: fielding.po
po/ga/: fielding.po
po/gl/: fielding.po
po/he/: fielding.po
po/hi/: fielding.po
po/ia/: fielding.po
po/it/: fielding.po
po/ja/: fielding.po
po/ka/: fielding.po
po/ko/: fielding.po
po/lt/: fielding.po
po/lv/: fielding.po
po/nl/: fielding.po
po/nn/: fielding.po
po/pl/: fielding.po
po/pt_BR/: fielding.po
po/ro/: fielding.po
po/ru/: fielding.po
po/sa/: fielding.po
po/sk/: fielding.po
po/sl/: fielding.po
po/sv/: fielding.po
po/tr/: fielding.po
po/ug/: fielding.po
po/uk/: fielding.po
po/zh_CN/: fielding.po
po/zh_TW/: fielding.po
src/: CMakeLists.txt  Messages.sh  app.cpp  app.h  controller.cpp  controller.h  fieldingconfig.kcfg  fieldingconfig.kcfgc  main.cpp  royconfig.kcfgc
src/ui/: About.qml  GlobalMenu.qml  Main.qml  PageHeader.qml  main.qml
